fix: margin that causes not centered switch in create form template screen

--- a/app/styles/project/c-form-builder-edit.scss
+++ b/app/styles/project/c-form-builder-edit.scss
@@ -66,7 +66,7 @@
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.4);
   flex: 1;
   height: 100%;
-  margin: 0 3rem 6rem 6rem;
+  margin: 3rem 6rem;
   overflow-y: auto;
   scrollbar-width: none;
   -ms-overflow-style: none;
